@@ -11,7 +11,6 @@
 
 #include <stdarg.h>
 #include <libxml/parser.h>
-#include <libxml/parserInternals.h>	/* for char constants */
 #include <libxml/xmlerror.h>
 #include <libxml/xmlmemory.h>
 #include <libxml/globals.h>
